--- a/.github/workflows/0-welcome.yml
+++ b/.github/workflows/0-welcome.yml
@@ -3,13 +3,13 @@ name: Step 0, Welcome
 # This step triggers after the learner creates a new repository from the template.
 # This workflow updates from step 0 to step 1.
 
-# This will run every time we create push a commit to `main`.
+# This will run every time we create push a commit to `stemdo`.
 # Reference: https://docs.github.com/actions/learn-github-actions/events-that-trigger-workflows
 on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      - stemdo
 
 # Reference: https://docs.github.com/actions/security-guides/automatic-token-authentication
 permissions:
@@ -18,7 +18,7 @@ permissions:
   contents: write
 
 jobs:
-  # Get the current step to only run the main job when the learner is on the same step.
+  # Get the current step to only run the stemdo job when the learner is on the same step.
   get_current_step:
     name: Check current step number
     runs-on: ubuntu-latest
@@ -62,3 +62,4 @@ jobs:
           from_step: 0
           to_step: 1
           branch_name: ci
+          base_branch_name: stemdo
