--- a/.github/workflows/4-add-branch-protections.yml
+++ b/.github/workflows/4-add-branch-protections.yml
@@ -19,7 +19,7 @@ permissions:
   contents: write
 
 jobs:
-  # Get the current step to only run the main job when the learner is on the same step.
+  # Get the current step to only run the stemdo job when the learner is on the same step.
   get_current_step:
     name: Check current step number
     runs-on: ubuntu-latest
@@ -56,11 +56,11 @@ jobs:
           fetch-depth: 0 # Let's get all the branches.
           ref: ci # Important, as normally `branch_protection_rule` event won't grab other branches
 
-      - name: Merge changes from origin/main into ci
+      - name: Merge changes from origin/stemdo into ci
         run: ./.github/script/merge-branch.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          branch1: origin/main
+          branch1: origin/stemdo
           branch2: ci
 
       # In README.md, switch step 4 for step 5.
